# rust-calculator

./: Cargo.toml  README.md
examples/: counter.rs  lazy_static.rs  match_num.rs
src/: calculate_lib.rs  calculate_sytle.css  main.rs  mod.rs
