[package]
name = "dioxus_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.4.0" }
dioxus-desktop = { version = "0.4.0" }
dioxus-signals = { version = "0.4.3"}
log = "0.4.14"
open = "5.0.0"
simple_logger = "4.2.0"
eval = "0.4.3"
regex = "1.10.3"
lazy_static = "1.4.0"
chrono = { version = "0.4.35", features = ["serde"] }
futures = "0.3.30"
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
async-recursion = "1.1.0"


[package.metadata.bundle]
name = "Dioxus File Explorerer"
identifier = "com.doe.exampleapplication"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
osx_frameworks = []
